# blockchain

./: .cursorrules  CLIENT_README.md  Cargo.toml  Dockerfile  README.md  SUMMARY.md  TESTNET.md  blockchain.service  config.toml  django_client_example.py  run_testnet.sh  start_testnet.sh  systemd_setup_instructions.md
chatchain_db/: messages.redb  messages_0.redb  node_1.redb
src/: main.rs
