[package]
name = "chatchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "bin/node.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[dependencies]
axum = "0.6.0"
clap = { version = "4.0.0", features = ["derive"] }
eyre = "0.6.0"
redb = "2.4.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
toml = "0.7.0"
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
